# sdk-rust

./: .flake8  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  README.rst  build.rs  pyproject.toml  run-ci.py  tbump.toml
.cargo/: config.toml
build-setup/: Cargo.toml
build-setup/src/: lib.rs
sdk/src/: core.rs  types.rs
sdk/tests/: group_tests.rs
sdk/tests/identity/admin/: rest.rs
sdk/tests/identity/test_app/: config.rs
src/: cadmin.rs  core.rs  ctanker.rs  encryption_session.rs  error.rs  http.rs  http_disabled.rs  lib.rs  sharing_options.rs  types.rs  verification.rs  verification_methods.rs  verification_options.rs
src/ctanker/: cfuture.rs  chttp.rs  cstream.rs
src/http/: client.rs  client_disabled.rs  request.rs  response.rs
tests/: encryption_session_tests.rs  group_tests.rs  http_tests.rs  stream_tests.rs  tanker_tests.rs  verify_tests.rs
tests/identity/: admin.rs  app.rs  mod.rs  oidc.rs  test_app.rs
tests/identity/admin/: block.rs  rest.rs
tests/identity/test_app/: config.rs
