[package]
name = "tankersdk"
version = "0.1.0"
edition = "2018"
authors = ["Tanker Team <contact@tanker.io>"]
license = "Apache-2.0"
publish = ["tanker", "tanker-dev"]
include = ["native", "src", "tests", "build.rs"]

[dependencies]
futures = "0.3"
num_enum = "0.5"
lazy_static = "1.4"
tokio = { version = "1.3", features = ["sync"] }
# Tokio's mpsc::sync channel has a bug in try_recv(), in the meantime we use async_channel
async-channel = "1.6.1"
libloading = "0.7.0"

[dev-dependencies]
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
double-checked-cell-async = "2.0.2"
rand = "0.7.3"
base64 = "0.13"
variant_count = "1.0"
blake2 = "0.9"
ed25519-dalek = "1.0"
x25519-dalek = "1.1"

