[package]
name = "tankersdk"
version = "0.1.0"
edition = "2021"
authors = ["Tanker Team <contact@tanker.io>"]
license = "Apache-2.0"
publish = ["tanker", "tanker-dev"]
include = ["native", "src", "tests", "build.rs"]

[dependencies]
futures = "0.3"
num_enum = "0.5"
lazy_static = "1.4"
tokio = { version = "1.12", features = ["sync"], default-features = false }
libloading = "0.7.0"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false, optional = true }
bytes = { version = "1.1.0", optional = true }

# Try to use system certificate store by default on desktops
[target.'cfg(any(windows, target_os = "linux", target_os = "macos"))'.dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "rustls-tls-native-roots"], default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
double-checked-cell-async = "2.0.2"
rand = "0.7.3"
base64 = "0.13"
variant_count = "1.0"
blake2 = "0.10.2"
ed25519-dalek = "1.0"
x25519-dalek = "1.1"
axum = "0.5.11"
tempfile = "3.3.0"

# This dep really depends on feature http, but can't express that due to https://github.com/rust-lang/cargo/issues/6915
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
default = ["http"]
http = ["tokio/rt-multi-thread", "dep:reqwest", "dep:bytes"]
# Use system certificate store in addition to WebPKI roots.
# Rustls only supports the sytem store on Windows/Linux/Mac, but this feature also enables the SSL_CERT_FILE env var.
# If you use self-signed certificates, enable this feature and add your cert to SSL_CERT_FILE or to the system store.
http-system-certs = ["http", "reqwest?/rustls-tls-native-roots"]
