[package]
name = "tankersdk-build-setup"
version = "0.1.0-alpha1"
edition = "2018"
authors = ["Tanker Team <contact@tanker.io>"]
license = "Apache-2.0"
publish = ["tanker", "tanker-dev"]
include = ["src"]

[dependencies]
dirs = "3.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
